--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
 
     <!-------------------------- seção 1 --------------------------->
 
-   <section class="secao_logo">
-    <div class="fundo">
-        <img class="imgFundo" src="./imagens/pc.jpg" alt="">
-        <div class="logo">
-            <div class="borda">
-            <img class="logo_img" src="./imagens/logo.sisters.png" alt="">
+    <section class="secao_logo">
+        <div class="fundo">
+            <img class="imgFundo" src="./imagens/pc.jpg" alt="">
+            <div class="logo">
+                <div class="borda">
+                    <img class="logo_img" src="./imagens/logo.sisters.png" alt="">
+                </div>
             </div>
         </div>
-    </div>
-   </section>
+    </section>
     <!-------------------------- seção 2 ----------------------->
     <section class="secao_header">
         <p class="texto1"> O que fazemos?</p>
-        <p class="texto2"> Trabalhamos com uma linha de 
-            criação e estratégia adaptada para 
+        <p class="texto2"> Trabalhamos com uma linha de
+            criação e estratégia adaptada para
             o perfil de cada cliente.</p>
     </section>
     <section class="secao_main">
@@ -35,46 +35,44 @@
             <div class="card">
                 <img class="icon_card" src="./imagens/05.png" alt="">
                 <p class="texto_card1"> Projetos web</p>
-                <p class="texto_card2">Disign e desenvolvimento de projetos web: 
-                    Sites, landing pages,dashboards e outros.</p>
+                <p class="texto_card2">Design e desenvolvimento de projetos web: Sites, landing pages,dashboards e
+                    outros.</p>
             </div>
             <div class="card">
                 <img class="icon_card" src="./imagens/04.png" alt="">
                 <p class="texto_card1"> Marketing digital</p>
-                <p class="texto_card2">Planejamento e ações de marketing digital 
-                    para sua marca conquistar mais cliente.</p>
+                <p class="texto_card2">Planejamento e ações de marketing digital para sua marca conquistar mais cliente.
+                </p>
             </div>
             <div class="card">
                 <img class="icon_card" src="./imagens/03.png" alt="">
                 <p class="texto_card1"> Identidade visual</p>
-                <p class="texto_card2">Construção de identidade visual e os 
-                    demais materiais auxiliares de branding.</p>
+                <p class="texto_card2">Construção de identidade visual e os demais materiais auxiliares de branding.</p>
             </div>
             <div class="card">
                 <img class="icon_card" src="./imagens/02.png" alt="">
                 <p class="texto_card1"> E-commerce</p>
-                <p class="texto_card2">Plataforma completa para e-commerce e 
-                    customização para sua empresa vender mais.</p>
+                <p class="texto_card2">Plataforma completa para e-commerce e customização para sua empresa vender mais.
+                </p>
             </div>
             <div class="card">
                 <img class="icon_card" src="./imagens/01.png" alt="">
                 <p class="texto_card1Insta"> Gestão de instagram</p>
-                <p class="texto_card2Insta">Alavanque suas vendas no instagram. 
-                    oferecemos gestão personalizada para 
+                <p class="texto_card2Insta">Alavanque suas vendas no instagram. oferecemos gestão personalizada para
                     resultados estratégicos e impactantes.</p>
             </div>
         </div>
     </section>
     <section class="secao_footer">
-        <p class="texto4">Seu projeto merece ficar em boas mãos, 
-            conte com a nossa agência para isso.</p>
-        <a class="btn" href="https://api.whatsapp.com/send/?phone=5581987390651&text&type=phone_number&app_absent=0">
+        <p class="texto4">Seu projeto merece ficar em boas mãos,
+            conte com a nossa agência para isso.</p> <br>
+        <a class="btn" href="https://api.whatsapp.com/send/?phone=  5581987390651&text&type=phone_number&app_absent=0">
             <p class="btn_texto1">Nosso atendimento</p>
             <p class="btn_texto2">COMERCIAL</p>
         </a>
         <a class="btn" href="https://api.whatsapp.com/message/AAIVEPI6YO5EH1?autoload=1&app_absent=0">
             <p class="btn_texto1">Atendimento comercial</p>
-            <p class="btn_texto_alt1">PEQUENAS 
+            <p class="btn_texto_alt1">PEQUENAS
                 EMPRESAS</p>
         </a>
         <a class="btn" href="./teste.html">
