--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +9,12 @@
     <title>Document</title>
 </head>
 
+
 <body>
 
+
     <!-------------------------- seção 1 --------------------------->
+
 
     <section class="secao_logo">
         <div class="fundo">
@@ -65,21 +69,26 @@
     </section>
     <section class="secao_footer">
         <p class="texto4">Seu projeto merece ficar em boas mãos,
-            conte com a nossa agência para isso.</p> <br>
-        <a class="btn" href="https://api.whatsapp.com/send/?phone=  5581987390651&text&type=phone_number&app_absent=0">
-            <p class="btn_texto1">Nosso atendimento</p>
-            <p class="btn_texto2">COMERCIAL</p>
-        </a>
-        <a class="btn" href="https://api.whatsapp.com/message/AAIVEPI6YO5EH1?autoload=1&app_absent=0">
-            <p class="btn_texto1">Atendimento comercial</p>
-            <p class="btn_texto_alt1">PEQUENAS
-                EMPRESAS</p>
-        </a>
-        <a class="btn" href="./teste.html">
-            <p class="btn_texto1">Conheça o</p>
-            <p class="btn_texto2">NOSSO SITE</p>
-        </a>
+            conte com a nossa agência para isso.</p>
+
+        <nav class="container_btn">
+            <a class="btn"
+                href="https://api.whatsapp.com/send/?phone=  5581987390651&text&type=phone_number&app_absent=0">
+                <p class="btn_texto1">Nosso atendimento</p>
+                <p class="btn_texto2">COMERCIAL</p>
+            </a>
+            <a class="btn" href="https://api.whatsapp.com/message/AAIVEPI6YO5EH1?autoload=1&app_absent=0">
+                <p class="btn_texto1">Atendimento comercial</p>
+                <p class="btn_texto_alt1">PEQUENAS
+                    EMPRESAS</p>
+            </a>
+            <a class="btn" href="./teste.html">
+                <p class="btn_texto1">Conheça o</p>
+                <p class="btn_texto2">NOSSO SITE</p>
+            </a>
+        </nav>
     </section>
 </body>
+
 
 </html>
