--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
             <div class="card">
                 <img class="icon_card" src="./imagens/05.png" alt="">
                 <p class="texto_card1"> Projetos web</p>
-                <p class="texto_card2">Design e desenvolvimento de projetos web: Sites, landing pages, dashboards e
-                    outros.</p>
+
+                <p class="texto_card2-1">Design e desenvolvimento de projetos web: Sites, landing pages, dashboards e
+                    outros.
+                </p>
             </div>
             <div class="card">
                 <img class="icon_card" src="./imagens/04.png" alt="">
@@ -51,12 +53,14 @@
             <div class="card">
                 <img class="icon_card" src="./imagens/03.png" alt="">
                 <p class="texto_card1"> Identidade visual</p>
-                <p class="texto_card2">Construção de identidade visual e os demais materiais auxiliares de branding.</p>
+                <p class="texto_card2-3">Construção de identidade visual e os demais materiais auxiliares de branding.
+                </p>
             </div>
             <div class="card">
                 <img class="icon_card" src="./imagens/02.png" alt="">
                 <p class="texto_card1"> E-commerce</p>
-                <p class="texto_card2">Plataforma completa para e-commerce e customização para sua empresa vender mais.
+                <p class="texto_card2-4">Plataforma completa para e-commerce e customização para sua empresa vender
+                    mais.
                 </p>
             </div>
             <div class="card">
